Fix overflowing Grid header cell when dragging it

--- a/styles/web/common/grid.less
+++ b/styles/web/common/grid.less
@@ -18,6 +18,11 @@
     outline: none;
 }
 
+.k-header.k-drag-clue
+{
+    overflow: hidden;
+}
+
 .k-grid-header th.k-header,
 .k-filter-row th
 {
